# loam_back_and_forth

./: CMakeLists.txt  README  loam_back_and_forth.launch  loam_back_and_forth.rviz  loam_back_and_forth_robotnik.launch  manifest.xml  package.xml  stack.xml
src/: back_and_forth_movement.cpp  laserMapping.cpp  laserOdometry.cpp  scanRegistration.cpp  transformMaintenance.cpp
